fix(frontend): sticky header+scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,8 +15,12 @@ html[class="dark"] {
   background-color: #1f2937;
 }
 
-/* Forms */
+/* employee-layout */
+.employee-layout > div {
+  height: "calc(100vh - 4rem)"
+}
 
+/* Forms */
 .input-group {
   @apply inline-flex;
 }
